clusters/talos-ottawa/apps/media/app/jellystat/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellystat
spec:
  selector:
    app: jellystat
  ports:
  - name: http
    port: 3000
    protocol: TCP
    targetPort: 3000
  type: ClusterIP
