clusters/talos-ottawa/apps/media/app/jellystat/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellystat
  namespace: media
  annotations:
    item.homer.rajsingh.info/name: "Jellystat"
    item.homer.rajsingh.info/subtitle: "Jellyfin Analytics"
    item.homer.rajsingh.info/logo: "https://raw.githubusercontent.com/walkxcode/dashboard-icons/main/svg/jellystat.svg"
    item.homer.rajsingh.info/tag: "media"
    item.homer.rajsingh.info/keywords: "jellyfin, analytics, statistics"

    service.homer.rajsingh.info/name: "Media"
    service.homer.rajsingh.info/icon: "fas fa-tv"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ts
      namespace: home
  hostnames:
    - "jellystat.${COMMON_DOMAIN}"
    - "jellystat.${CLUSTER_DOMAIN}"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: jellystat
          port: 3000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
